docs/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robson-frontend-v2
  namespace: <NAMESPACE>  # adjust
  labels:
    app: robson-frontend-v2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: robson-frontend-v2
